[tool.poetry]
name = "hubmap"
version = "0.0.1"
description = "HuBMAP - Hacking the Human Vasculature Segment instances of microvascular structures from healthy human kidney tissue slides."
authors = [
    "Jonas Blenninger <jonas@blenninger.de>",
    "Christian Bernhard <christianbernhard089@gmail.com>",
    "Batuhan Gül <gulbatu3@googlemail.com>",
    "Thomas Ziereis <thomas.ziereis@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scienceplots = "^2.1.0"
numpy = "^1.24.3"
pandas = "^2.0.2"
torchvision = "^0.15.2"
black = "^23.7.0"
notebook = "^7.0.2"
timm = "^0.9.2"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"
ipywidgets = "^8.1.0"
ipykernel = "^6.25.0"
ipython = "^8.14.0"
pytorch-lightning = "^2.0.6"
lightning = "^2.0.6"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
transformers = "^4.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
